--- a/sass/blocks/map.scss
+++ b/sass/blocks/map.scss
@@ -2,7 +2,7 @@
   position: relative;
   margin: 0 auto;
   margin-top: 50px;
-  margin-bottom: 28px;
+  margin-bottom: 38px;
 
   img {
     width: 100%;
@@ -17,15 +17,15 @@
     left: 47%;
     width: 27px;
     height: 27px;
-    background: url(../../img/icons/icon-map-marker.svg) center no-repeat;
+    background: url(../img/icons/icon-map-marker.svg) center no-repeat;
     background-size: 27px auto;
   }
 }
 
 @media #{$tablet-width} {
   .map {
-    margin-top: 58px;
-    margin-bottom: 27px;
+    margin-top: 66px;
+    margin-bottom: 35px;
 
     &:after {
       left: 49%;
