--- a/sass/blocks/page-footer.scss
+++ b/sass/blocks/page-footer.scss
@@ -12,12 +12,12 @@
 
   &__social {
     margin-top: 35px;
-    margin-bottom: 45px;
+    margin-bottom: 35px;
   }
 
   &__copyright {
     position: relative;
-    margin-right: 50px;
+    margin-right: 45px;
     line-height: 40px;
   }
 
@@ -25,11 +25,11 @@
     content: "";
     position: absolute;
     top: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    background: url("../../img/logo-htmlacademy.svg") 72% 50% no-repeat;
-    background-size: 30px auto;
+    right: 19%;
+    width: 27px;
+    height: 35px;
+    background: url("../../img/logo-htmlacademy.svg") center no-repeat;
+    background-size: 27px auto;
   }
 }
 
@@ -37,10 +37,7 @@
   .page-footer {
 
     &__wrapper {
-      width: 90%;
-      margin: 0 auto;
-      padding-left: 35px;
-      padding-right: 77px;
+      padding: 0 6.5%;
       display: flex;
       justify-content: space-between;
     }
@@ -50,12 +47,14 @@
     }
 
     &__copyright {
-      padding-top: 10px;
+      padding-top: 5px;
+      padding-right: 50px;
+      margin-right: 0;
     }
 
     &__copyright:after {
-      top: -15px;
-      right: -65px;
+      top: 10%;
+      right: 6%;
     }
   }
 }
@@ -64,9 +63,7 @@
   .page-footer {
 
     &__wrapper {
-      width: 80%;
-      padding-left: 0;
-      padding-right: 0;
+      padding: 0 10%;
     }
   }
 }
