--- a/sass/blocks/video.scss
+++ b/sass/blocks/video.scss
@@ -1,6 +1,5 @@
 .video {
-  margin: 0 20px;
-  margin-bottom: 67px;
+  margin-bottom: 75px;
 
   img {
     width: 100%;
@@ -58,7 +57,7 @@
     left: 17%;
     width: 20px;
     height: 20px;
-    background: url("../../img/icon-video-replay.svg") center no-repeat;
+    background: url("../img/icon-video-replay.svg") center no-repeat;
     background: 20px auto;
   }
 
@@ -68,7 +67,7 @@
     left: 35%;
     width: 32px;
     height: 20px;
-    background: url("../../img/icon-video-subtitles.svg") center no-repeat;
+    background: url("../img/icon-video-subtitles.svg") center no-repeat;
     background-size: 32px auto;
   }
 
@@ -78,13 +77,15 @@
     right: 17%;
     width: 20px;
     height: 20px;
-    background: url("../../img/icon-video-fullscreen.svg") center no-repeat;
+    background: url("../img/icon-video-fullscreen.svg") center no-repeat;
     background-size: 20px auto;
   }
 }
 
 @media #{$tablet-width} {
   .video {
+    @include container-fluid;
+    margin-bottom: 75px;
 
     &__range {
       width: 100%;
@@ -142,12 +143,20 @@
 
 @media #{$desctop-width} {
   .video {
-    width: 70%;
+    width: 67%;
     margin: 0 auto;
-    margin-bottom: 48px;
+    margin-bottom: 120px;
 
     &__controls {
       width: 67%;
+    }
+
+    &__scale {
+      top: 47%;
+    }
+
+    &__toggle {
+      top: 44%;
     }
 
     &__update {
@@ -159,43 +168,4 @@
     }
   }
 }
-/*
-  @media #{$tablet-width} {
-  .video {
-
-    &__range {
-      position: relative;
-      top: -93px;
-      min-height: 93px;
-      background: rgba(0, 0, 0, 0.5);
-    }
-
-    &__controls {
-      min-height: 51px;
-      margin: 0;
-    }
-
-    &__scale {
-      top: 88%;
-    }
-
-    &__toggle {
-      top: 83%;
-    }
-
-    &__menu {
-      margin: 0;
-      min-height: 42px;
-      background: rgba(0, 0, 0, 0.5);
-    }
-  }
-}
-
-@media #{$desctop-width} {
-  .video {
-    width: 70%;
-    margin: 0 auto;
-    margin-bottom: 48px;
-  }
-}*/
 
