--- a/sass/global/base.scss
+++ b/sass/global/base.scss
@@ -11,11 +11,5 @@ body {
   text-transform: uppercase;
 }
 .wrapper {
-
-  /*@media #{$tablet-width} {
-    width: 768px;
-  }
-  @media #{$desctop-width} {
-    width: 1200px;
-  }*/
+  position: relative;
 }
