--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -44,4 +44,16 @@
   background-color: $c_base;
   border: none;
 }
+// modal
+@mixin modal () {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  @include flex-column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 7px 15px rgba(41,52,73,.15);
+  background-color: $c_white;
+  z-index: 100;
+}
 
