--- a/sass/blocks/form.scss
+++ b/sass/blocks/form.scss
@@ -99,10 +99,13 @@
     height: 55px;
     background-size: 18px auto;
   }
-
+/*
   &__icon--tel:before {
-    background: #e6e6e6 url("../img/icon-phone.svg") 50% 50% no-repeat;
-  }
+    background-image: url("../../img/symbols.svg");
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-color: #e6e6e6;
+    /*background: #e6e6e6 url("") 50% 50% no-repeat;*/
 
   &__icon--mail:before {
     background: #e6e6e6 url("../img/icon-mail.svg") 50% 50% no-repeat;
