--- a/sass/blocks/form.scss
+++ b/sass/blocks/form.scss
@@ -90,25 +90,23 @@
     margin-bottom: 7px;
   }
 
-  &__icon:before {
+  &__icon:after {
     content: "";
     position: absolute;
-    top: 8px;
+    top: 7px;
     right: 0;
-    width: 55px;
-    height: 55px;
-    background-size: 18px auto;
-  }
-/*
-  &__icon--tel:before {
-    background-image: url("../../img/symbols.svg");
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
+    width: 58px;
+    height: 56px;
     background-color: #e6e6e6;
-    /*background: #e6e6e6 url("") 50% 50% no-repeat;*/
+  }
 
-  &__icon--mail:before {
-    background: #e6e6e6 url("../img/icon-mail.svg") 50% 50% no-repeat;
+  &__icon-phone, &__icon-mail {
+    position: absolute;
+    top: 26px;
+    right: 19px;
+    width: 18px;
+    height: 18px;
+    z-index: 10;
   }
 
   &__error {
@@ -196,17 +194,15 @@
       background-color: $c_icon;
       border-radius: 10%;
     }
-
-    input[type="checkbox"]:checked + label:after {
+/*
+    input[type="checkbox"]:checked + label:before {
       content: "";
       position: absolute;
       top: 0;
       left: 15px;
       width: 100%;
       height: 100%;
-      background: url("../img/icon-tick.svg") left no-repeat;
-      background-size: 25px auto;
-    }
+    }*/
   }
 
   &__emotions {
@@ -478,8 +474,12 @@
       }
     }
 
-    &__icon:before {
+    &__icon:after {
       top: 0;
+    }
+
+    &__icon-phone, &__icon-mail {
+      top: 20px;
     }
 
     &__error {
@@ -495,7 +495,7 @@
       margin-top: 30px;
 
       label {
-        margin-right: 20px;
+        width: 34%;
       }
     }
 
