--- a/sass/global/base.scss
+++ b/sass/global/base.scss
@@ -1,19 +1,16 @@
-*{
-  margin: 0;
-  padding: 0;
-}
+
 body {
+  margin: 0;
   font-family: $ff_base;
   font-size: 14px;
   line-height: 26px;
-
   text-align: center;
   text-transform: uppercase;
 }
 .wrapper {
   position: relative;
+}
 
-  svg {
-    display: none;
-  }
+.sprite-svg {
+  display: none;
 }
