--- a/sass/blocks/form.scss
+++ b/sass/blocks/form.scss
@@ -19,6 +19,17 @@
       line-height: 26px;
       background-color: #f2f2f2;
       border: none;
+      outline: none;
+      cursor: pointer;
+    }
+
+    input:hover {
+      background-color: #e5e5e5;
+    }
+
+    input:focus {
+      background-color: $c_white;
+      outline: 4px solid #e5e5e5;
     }
   }
 
@@ -128,24 +139,37 @@
     @include list-clear;
 
     li {
-      position: relative;
       padding: 15px;
-      padding-left: 77px;
       margin-bottom: 13px;
     }
 
     input {
       display: none;
-      margin-right: 38px;
     }
+
+    input[type="radio"] + label:hover:before {
+      background-color: #e5e5e5;
+    }
+
+    input[type="radio"] + label:active:before {
+      background-color: #d5d5d5;
+    }
+
+    input[type="radio"] + label {
+      position: relative;
+      padding: 15px;
+      padding-left: 77px;
+      cursor: pointer;
+    }
+
     input[type="radio"] + label:before {
       content: "";
       position: absolute;
       top: 0;
       left: 0;
-      width: 56px;
-      height: 56px;
-      background-color: $c_icon;
+      width: 55px;
+      height: 55px;
+      background: $c_icon;
       border-radius: 50%;
     }
 
@@ -158,6 +182,10 @@
       height: 20px;
       background-color: $c_black;
       border-radius: 50%;
+    }
+
+    input[type="radio"]:checked + label:active:after {
+      opacity: 0.3;
     }
   }
 
@@ -173,15 +201,18 @@
     @include list-clear;
 
     li {
-      position: relative;
       margin-bottom: 24px;
       padding: 15px;
-      padding-left: 77px;
     }
 
     input {
       display: none;
-      margin-right: 40px;
+    }
+
+    input[type="checkbox"] + label {
+      position: relative;
+      padding: 15px;
+      padding-left: 77px;
     }
 
     input[type="checkbox"] + label:before {
@@ -194,15 +225,29 @@
       background-color: $c_icon;
       border-radius: 10%;
     }
-/*
-    input[type="checkbox"]:checked + label:before {
+
+    input[type="checkbox"] + label:hover:before {
+      background-color: #e5e5e5;
+    }
+
+    input[type="checkbox"] + label:active:before {
+      background-color: #d5d5d5;
+    }
+
+    input[type="checkbox"]:checked + label:after {
       content: "";
       position: absolute;
       top: 0;
       left: 15px;
       width: 100%;
       height: 100%;
-    }*/
+      background: url("../../img/icons/icon-tick.svg") left no-repeat;
+      background-size: 25px auto;
+    }
+
+    input[type="checkbox"]:checked + label:active:after {
+      opacity: 0.3;
+    }
   }
 
   &__emotions {
