--- a/sass/blocks/page-footer.scss
+++ b/sass/blocks/page-footer.scss
@@ -21,15 +21,18 @@
     line-height: 40px;
   }
 
-  &__copyright:after {
-    content: "";
+  &__logo-footer {
     position: absolute;
-    top: 0;
-    right: 19%;
-    width: 27px;
-    height: 35px;
-    background: url("../../img/logo-htmlacademy.svg") center no-repeat;
-    background-size: 27px auto;
+    top: 5px;
+    right: 30%;
+  }
+
+  &__logo-footer:hover {
+    fill: #81b3d2;
+  }
+
+  &__logo-footer:active {
+    fill: #b2b2b2;
   }
 }
 
@@ -52,9 +55,8 @@
       margin-right: 0;
     }
 
-    &__copyright:after {
-      top: 10%;
-      right: 6%;
+    &__logo-footer {
+      right: 10%;
     }
   }
 }
