--- a/sass/blocks/reasons.scss
+++ b/sass/blocks/reasons.scss
@@ -62,29 +62,31 @@
   &__list {
     position: relative;
     margin-bottom: 28px;
-    padding-left: 63px;
+    padding-left: 70px;
   }
 
   &__list:before {
     content: "";
     position: absolute;
-    top: -20px;
+    top: -25px;
     left: 0;
     width: 75px;
     height: 73px;
-    background-size: 40px auto;
   }
 
   &__list--house:before {
-    background: url("../img/icon-house.svg") center no-repeat;
+    background: url("../img/icons/icon-house.svg") center no-repeat;
+    background-size: 40px auto;
   }
 
   &__list--gift:before {
-    background: url("../img/icon-gift.svg") center no-repeat;
+    background: url("../img/icons/icon-gift.svg") center no-repeat;
+    background-size: 40px auto;
   }
 
   &__list--burger:before {
-    background: url("../img/icon-burger.svg") center no-repeat;
+    background: url("../img/icons/icon-burger.svg") center no-repeat;
+    background-size: 40px auto;
   }
 
   &__list-title {
@@ -128,6 +130,7 @@
 
     &__wrapper-width {
       width: calc(100% / 3);
+      margin: 0;
       display: flex;
     }
 
