--- a/sass/blocks/social-links.scss
+++ b/sass/blocks/social-links.scss
@@ -17,18 +17,20 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-size: 20px auto;
   }
 
   &__common--tw:before {
-    background: url("../img/icon-twitter.svg") center no-repeat;
+    background: url("../img/icons/icon-twitter.svg") center no-repeat;
+    background-size: 18px auto;
   }
 
   &__common--fb:before {
-    background: url("../img/icon-facebook.svg") center no-repeat;
+    background: url("../img/icons/icon-facebook.svg") center no-repeat;
+    background-size: 9px auto;
   }
 
   &__common--yut:before {
-    background: url("../img/icon-youtube.svg)") center no-repeat;
+    background: url("../img/icons/icon-youtube.svg") center no-repeat;
+    background-size: 20px auto;
   }
 }
