--- a/sass/blocks/gallery.scss
+++ b/sass/blocks/gallery.scss
@@ -47,7 +47,7 @@
     left: 0;
     width: 30px;
     height: 25px;
-    background: url("../../img/icon-like.svg") left no-repeat;
+    background: url("../img/icon-like.svg") left no-repeat;
     background-size: 22px auto;
   }
 }
