--- a/sass/blocks/map.scss
+++ b/sass/blocks/map.scss
@@ -17,7 +17,7 @@
     left: 47%;
     width: 27px;
     height: 27px;
-    background: url(../../img/icons/icon-map-marker.svg) center no-repeat;
+    background: url(../img/icons/icon-map-marker.svg) center no-repeat;
     background-size: 27px auto;
   }
 }
