--- a/sass/blocks/social-links.scss
+++ b/sass/blocks/social-links.scss
@@ -21,14 +21,14 @@
   }
 
   &__common--tw:before {
-    background: url(../../img/icon-twitter.svg) center no-repeat;
+    background: url(../img/icon-twitter.svg) center no-repeat;
   }
 
   &__common--fb:before {
-    background: url(../../img/icon-facebook.svg) center no-repeat;
+    background: url(../img/icon-facebook.svg) center no-repeat;
   }
 
   &__common--yut:before {
-    background: url(../../img/icon-youtube.svg) center no-repeat;
+    background: url(../img/icon-youtube.svg) center no-repeat;
   }
 }
