--- a/sass/blocks/video.scss
+++ b/sass/blocks/video.scss
@@ -58,7 +58,7 @@
     left: 17%;
     width: 20px;
     height: 20px;
-    background: url("../../img/icon-video-replay.svg") center no-repeat;
+    background: url("../img/icon-video-replay.svg") center no-repeat;
     background: 20px auto;
   }
 
@@ -68,7 +68,7 @@
     left: 35%;
     width: 32px;
     height: 20px;
-    background: url("../../img/icon-video-subtitles.svg") center no-repeat;
+    background: url("../img/icon-video-subtitles.svg") center no-repeat;
     background-size: 32px auto;
   }
 
@@ -78,7 +78,7 @@
     right: 17%;
     width: 20px;
     height: 20px;
-    background: url("../../img/icon-video-fullscreen.svg") center no-repeat;
+    background: url("../img/icon-video-fullscreen.svg") center no-repeat;
     background-size: 20px auto;
   }
 }
