--- a/sass/blocks/form.scss
+++ b/sass/blocks/form.scss
@@ -95,11 +95,11 @@
   }
 
   &__icon--tel:before {
-    background: #e6e6e6 url("../../img/icon-phone.svg") 50% 50% no-repeat;
+    background: #e6e6e6 url("../img/icon-phone.svg") 50% 50% no-repeat;
   }
 
   &__icon--mail:before {
-    background: #e6e6e6 url("../../img/icon-mail.svg") 50% 50% no-repeat;
+    background: #e6e6e6 url("../img/icon-mail.svg") 50% 50% no-repeat;
   }
 
   &__error {
@@ -194,7 +194,7 @@
       left: 15px;
       width: 100%;
       height: 100%;
-      background: url("../../img/icon-tick.svg") left no-repeat;
+      background: url("../img/icon-tick.svg") left no-repeat;
       background-size: 25px auto;
     }
   }
