--- a/sass/blocks/page-footer.scss
+++ b/sass/blocks/page-footer.scss
@@ -28,7 +28,7 @@
     right: 0;
     width: 100%;
     height: 100%;
-    background: url("../../img/logo-htmlacademy.svg") 72% 50% no-repeat;
+    background: url("../img/logo-htmlacademy.svg") 72% 50% no-repeat;
     background-size: 30px auto;
   }
 }
