--- a/sass/blocks/reasons.scss
+++ b/sass/blocks/reasons.scss
@@ -73,15 +73,15 @@
   }
 
   &__list--house:before {
-    background: url(../../img/icon-house.svg) center no-repeat;
+    background: url(../img/icon-house.svg) center no-repeat;
   }
 
   &__list--gift:before {
-    background: url(../../img/icon-gift.svg) center no-repeat;
+    background: url(../img/icon-gift.svg) center no-repeat;
   }
 
   &__list--burger:before {
-    background: url(../../img/icon-burger.svg) center no-repeat;
+    background: url(../img/icon-burger.svg) center no-repeat;
   }
 
   &__list-title {
@@ -101,7 +101,7 @@
   top: 0;
   width: 100%;
   height: 40px;
-  background: url("../../img/bg-triangle.svg") top center no-repeat;
+  background: url("../img/bg-triangle.svg") top center no-repeat;
   background-size: cover;
 }
 
